src/css/includes/_tables.scss
.table {
    width: 100%;
    max-width: 100%;
    word-wrap: break-word;

    @include border-radius();
    @include bottom-margin();

    thead {
        border-bottom: 2px solid $grey;
    }

    tfoot {
        border-top: 2px solid $grey;
    }

    tr {
        border-bottom: 1px solid $grey;

        th, td {
            padding: 8px;
            vertical-align: top;

            &:first-of-type {
                padding-left: 16px;
            }

            &:last-of-type {
                padding-right: 16px;
            }
        }

        th {
            vertical-align: bottom;
            text-align: left;
        }

        td {
            vertical-align: top;
        }

        &:last-child {
            border-bottom: none;
            @include border-radius-bottom(4px);
        }
    }

    &.invert {
        > tbody > tr {
            &:nth-of-type(odd) {
                background-color: $grey-light;
            }
        }
    }

    .align-left     {text-align: left;}
    .align-mid      {text-align: center;}
    .align-right    {text-align: right;}
}

